# BlenderRag

./: .gitattributes  .gitignore  .mcp.json  ARCHITECTURE.md  README.md  config.yaml  pyproject.toml
docs/: CREATIVE_SOURCES_PLAN.md  SCENEVAL.md  SOURCES_AND_WEIGHTING.md
eval/: RANKING_NOTES.md  RESULTS.md  SCENEVAL.md  SCENEVAL_haiku.md  queries.jsonl  sceneval_haiku.json
eval-logs/: scene-2026-05-30-session-end.blend  scene-2026-05-30-session-end.blend1  scene-pre-eval-2026-05-30.blend  scene-v15.blend  scene-v17-hero.blend  scene-v21-final-grass.blend  scene-v22-hero-grass.blend  scene-v27-hero-fireflies.blend  scene-v30-final.blend  scene-v32-hero.blend  scene-v33-hero.blend  scene-v34-final.blend  scene-v36-final.blend  scene-v39-final.blend  scene-v40-final.blend  scene-v41-final.blend  scene-v42-final.blend  scene-v44-final.blend  scene-v46-final.blend  session-2026-05-30-floating-island.md
scripts/: build_all.py  build_chunks.py  build_context.py  build_corpus.py  build_index.py  eval.py  gather_creative_sources.py  run_scene_eval.py  score_haiku_ablation.py  search.py  show_session.py  verify_mcp.py
tests/: test_acquire_integration.py  test_addons.py  test_addons_thirdparty.py  test_blend_nodes.py  test_bpy_api.py  test_chunk.py  test_config.py  test_contextualize.py  test_dev_blog.py  test_devdocs_blendermcp.py  test_evaluate.py  test_gotchas.py  test_index.py  test_io.py  test_release_notes.py  test_rerank.py  test_retrieval_integration.py  test_rst.py  test_sceneval_aggregate.py  test_sceneval_backends.py  test_sceneval_cli.py  test_sceneval_gotchas.py  (+10 more)
(+102 files in other folders)
