[project]
name = "blender-rag"
version = "0.1.0"
description = "Local Blender 5.1 knowledge vector DB + MCP server for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5",
    "docutils>=0.20",
    "tqdm>=4.66",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
]

# Heavy ML deps live in their own group so the pure-logic pipeline
# (acquire / normalize / chunk) installs and tests fast, without torch.
[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]
ml = [
    "torch>=2.7",
    "FlagEmbedding>=1.3",
    "sentence-transformers>=3.0",
    "lancedb>=0.15",
    "mcp>=1.2",
    "ollama>=0.3",
]

# torch comes from the CUDA 12.8 wheel index (Blackwell / RTX 50-series).
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blender_rag"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: test reaches the network (deselect with -m 'not network')",
]
